syntax = "proto3";

package user;

option java_multiple_files = true;
option java_package = "com.example.user";

message UserInformationRequest{
  int32 user_id = 1;
}

message UserInformation {
  int32 user_id = 1;
  string name = 2;
  int32 balance = 3;
}
service UserService {

  rpc GetUserInformation(UserInformationRequest) returns (UserInformation);
}